--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Hello World!" 
+<html>
+
+<head>
+	<title>Redirecting to Heroku...</title>
+	<script>
+		function redirect() {
+			window.location.replace("https://jus-consigliere.herokuapp.com/");
+		}
+	</script>
+</head>
+
+<body onload="redirect()">
+</body>
+
+</html>
