--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
 
 <head>
-	<title>Redirecting to Heroku...</title>
-	<script>
+	<title>JC - Jus Consigliere</title>
+	<!--<script>
 		function redirect() {
 			window.location.replace("https://jus-consigliere.herokuapp.com/");
 		}
-	</script>
+	</script>-->
 </head>
 
-<body onload="redirect()">
+<body>
+<iframe src="https://jus-consigliere.herokuapp.com/"/>
 </body>
 
 </html>
