--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<iframe src="https://jus-consigliere.herokuapp.com/"/>
+<iframe src="https://jus-consigliere.herokuapp.com/" style="border: 0; margin: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
 </body>
 
 </html>
